// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > matches snapshot — default variant 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="group type-mono-1040 relative inline-flex max-w-fit flex-no-wrap items-center justify-center overflow-hidden whitespace-nowrap rounded-full bg-black text-white px-2 py-0.5"
  >
    Default
  </div>
</DocumentFragment>
`;

exports[`Badge > matches snapshot — error variant 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="group type-mono-1040 relative inline-flex max-w-fit flex-no-wrap items-center justify-center overflow-hidden whitespace-nowrap rounded-full bg-debug-red text-black px-2 py-0.5"
  >
    Error
  </div>
</DocumentFragment>
`;

exports[`Badge > matches snapshot — success variant 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="group type-mono-1040 relative inline-flex max-w-fit flex-no-wrap items-center justify-center overflow-hidden whitespace-nowrap rounded-full bg-debug-blue text-black px-2 py-0.5"
  >
    Success
  </div>
</DocumentFragment>
`;
